# ik_moz

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: robot_integration.py  selftest.py
mozrobot_ik/: __init__.py  cli.py  frames.py  solver.py  types.py  urdf_data.py
mozrobot_ik/data/: spirit01.urdf
tests/: test_ik.py
