[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mozrobot-ik"
version = "0.1.0"
description = "本地笛卡尔→关节逆运动学 (Pinocchio) for Spirit01 双臂机器人"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Proprietary - Copyright (c) 2025 Spirit AI" }
authors = [{ name = "Spirit AI" }]
dependencies = [
    "numpy>=1.20",
    "pin>=3.0",        # Pinocchio Python (PyPI 包名为 pin)
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.scripts]
mozrobot-ik-selftest = "mozrobot_ik.cli:selftest"

[tool.setuptools]
packages = ["mozrobot_ik"]

[tool.setuptools.package-data]
mozrobot_ik = ["data/*.urdf"]
